# vulkan-compute-ray-tracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile.sh
resources/shaders/source/: post-process-shader.frag  post-process-shader.vert  ray-trace-compute-simple.comp  ray-trace-compute.comp
resources/shaders/source/include/: definitions.glsl  random.glsl
src/: main.cpp
src/app-context/: VulkanApplicationContext.cpp  VulkanApplicationContext.h  VulkanGlobal.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/compute/: Bvh.h  GpuModels.h  RtScene.h  TextureOutputComputeModel.h
src/memory/: Buffer.h  Image.cpp  Image.h  ImageUtils.h  SingleTimeCommand.h  VulkanBuffer.h  VulkanBuffer.tpp  VulkanImage.cpp  VulkanImage.h
src/pipeline/: VulkanDescriptorSet.h  VulkanPipeline.h
src/ray-tracing/: Bvh.h  GpuModels.h  RtScene.h
src/render-context/: FlatRenderPass.cpp  FlatRenderPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h  PostProcessRenderContext.h  RenderPass.h  RenderSystem.cpp  RenderSystem.h
src/scene/: ComputeMaterial.cpp  ComputeMaterial.h  ComputeModel.cpp  ComputeModel.h  DrawableModel.cpp  DrawableModel.h  Material.cpp  Material.h  Scene.cpp  Scene.h  ScreenQuadModel.h  mesh.cpp  mesh.h
src/utils/: Camera.h  RootDir.h.in  StbImageImpl.cpp  StbImageImpl.h  glm.h  readfile.h  vulkan.h
